--- a/files/css/style.css
+++ b/files/css/style.css
@@ -7259,27 +7259,39 @@ p.meta-row .meta-label {
 }
 
 .sr-button.button-1 {
-  background: #77a2f8;
-  border: 2px solid #77a2f8;
+  background: #7ad576;
+  border: 2px solid #7ad576;
   color: #ffffff;
+  box-shadow: 1px 1px 1px grey;
+  transition: all 0.3s ease 0s;
+    cursor: pointer;
+  outline: none;
 }
 
 .sr-button.button-1:hover {
   background: transparent;
-  border: 2px solid #77a2f8;
-  color: #77a2f8;
+  border: 2px solid #7ad576;
+  color: #7ad576;
+   box-shadow: 0px 2px 4px rgba(122, 213, 118, 1);
+    transform: translateY(-2px);
 }
 
 .sr-button.button-1-ghost {
   background: transparent;
   border: 2px solid #77a2f8;
   color: #77a2f8;
+    box-shadow: 1px 1px 1px grey;
+  transition: all 0.3s ease 0s;
+    cursor: pointer;
+  outline: none;
 }
 
 .sr-button.button-1-ghost:hover {
   background: #77a2f8;
   border: 2px solid #77a2f8;
   color: #ffffff;
+     box-shadow: 0px 2px 4px rgba(119, 162, 248, 1);
+    transform: translateY(-2px);
 }
 
 .sr-button.button-1-ghost-req {
@@ -9915,6 +9927,7 @@ header:not(.header-transparent) + #page-body .fullwidth-section.fullheight:first
   padding-bottom: 0px;
   justify-content: center;
   align-items: center;
+
 }
 
 .features-media .features-media__icon {
@@ -12076,7 +12089,7 @@ background-color: #77a2f8;
   transition: 1s bottom ease-out;
   left: 0;
   background: white;
-  height: 80px;
+  height: 60px;
   z-index: 1001;
   width: 100%;
 	border-top: 1px solid #eee;
