--- a/files/css/style.css
+++ b/files/css/style.css
@@ -3320,7 +3320,7 @@ header.header-style-vertical #top-bar .socialmedia-widget li {
 ------------------------------------------------*/
 footer {
   width: 100%;
-  height: 80px;
+  height: 130px;
   background: #f5f6f7;
   position: relative;
   border-top: 1px solid #e0e0e0;
@@ -3332,7 +3332,7 @@ border-color: #333333;
 }
 
 footer.footer-custom {
-  background: none;;
+  background: none;
   border: none;
 }
 
@@ -3342,10 +3342,19 @@ footer .footer-inner {
 
 footer .copyright {
   border-top: 1px solid rgba(0, 0, 0, .10);
-  text-align: center;
-  padding: 30px 0;
+  padding: 16px 0;
   line-height: 20px;
 }
+
+#footer .copyright {
+  border: none;
+  text-align: left;
+}
+
+#footer .privacy {
+  text-align: right;
+}
+
 
 .text-light .copyright {
   border-color: rgba(255, 255, 255, .15);
